<resources>
    <string name="app_name">MMC Identity</string>
    <string name="authenticate_with_token">Authenticate With Token</string>
    <string name="auth_token_log_in_with_sample_user">Auto token log in with sample user</string>
    <string name="or">-- or --</string>
    <string name="not_now">Not now</string>
    <string name="sms_validation">SMS Validation</string>
    <string name="please_enter_you_phone_number">Please enter your phone number</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="logging_in">Logging in…</string>
    <string name="log_in_instruction">Please log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="click_here_to_log_in_user">Click Here To Login User</string>
    <string name="update_user_metadata">Update Metadata</string>
    <string name="update_user_tags">Update Tags</string>
    <string name="update_user">Update User</string>
    <string name="external_id">External ID</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dma">DMA</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="ip_address">IP Address</string>
    <string name="log_out">Log Out</string>
</resources>
