<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:id="@+id/mlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp">

        <EditText
            android:id="@+id/update_user_external_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/external_id"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>


        <EditText
            android:id="@+id/update_user_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_dma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dma"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zip_code"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/update_user_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/country"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:inputType="text"/>

        <EditText
            android:id="@+id/update_user_ip_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ip_address"
            android:inputType="numberDecimal"/>
    </LinearLayout>
</ScrollView>