<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/onboarding_bottom_padding"
        android:paddingEnd="@dimen/onboarding_right_margin"
        android:paddingLeft="@dimen/onboarding_left_margin"
        android:paddingRight="@dimen/onboarding_right_margin"
        android:paddingStart="@dimen/onboarding_left_margin"
        tools:context="com.sessionm.mmc.view.LoginActivity">

        <TextView
            android:id="@+id/email_sign_in_instruction_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/onboarding_top_margin"
            android:gravity="center"
            android:text="@string/log_in_instruction"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onboarding_input_height"
            android:layout_below="@id/email_sign_in_instruction_textview"
            android:layout_marginTop="@dimen/onboarding_top_margin"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onboarding_input_height"
            android:layout_below="@id/sign_in_email"
            android:layout_marginTop="@dimen/onboarding_button_gap"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onboarding_submit_button_height"
            android:layout_below="@id/sign_in_password"
            android:layout_marginTop="@dimen/onboarding_submit_button_gap"
            android:background="@color/colorPrimary"
            android:enabled="false"
            android:text="@string/action_sign_in"/>

        <TextView
            android:id="@+id/login_or_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_sign_in_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/auth_token_login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/onboarding_submit_button_height"
            android:layout_below="@id/login_or_text"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/authenticate_with_token"/>

        <TextView
            android:id="@+id/sample_auth_token_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_token_login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/auth_token_log_in_with_sample_user"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/email_sign_in_not_now_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sample_auth_token_login_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/not_now"
            android:textSize="18sp"/>

    </RelativeLayout>
</ScrollView>


